--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postinstall": "bower install",
     
     "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000",
+     
+    "start": "http-server ../blahg -a 0.0.0.0 -p 8000",
     
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
